Segundo gran commit desde laptop

--- a/instructores Spinning.html
+++ b/instructores Spinning.html
@@ -79,7 +79,7 @@ body {
 
 
 
-<section class="main-section paddind" id="Portfolio"><!--main-section-start-->
+<section class="main-section paddind paddindclase" id="Portfolio"><!--main-section-start-->
 	<div class="container">
     	<h2>DONDE NECESITAS TU INSTRUCTOR..?</h2>
     	<h6>Mira los profesionales que estan mas serca de tu ubicacion asi te aseguramos una mejor calidad de servicio...</h6>
