arreglo vinculo instructores spinning

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     
     <!--inicio nuevos items-->
                <div class=" Portfolio-box cardio">
-                	<a href="instructores spinning.html"><img src="img/clases/spining.jpg" alt=""></a>	
+                	<a href="instructores Spinning.html"><img src="img/clases/spining.jpg" alt=""></a>	
            	     <h3> Spinning</h3>
                     <p>Cardio</p>
                 </div>
