--- a/Entrenador Personal.html
+++ b/Entrenador Personal.html
@@ -56,7 +56,20 @@ body {
 <div class="container">
          
         <h1 class="wow fadeInLeft delay-05s"><strong>ENTRENADOR PERSONAL</strong></h1>
-        <div class="cabecera wow fadeInDown delay-09s"><a href="#"><img src="img/clases/personal training.jpg" alt=""></a></div>
+        <div class="cabecera wow fadeInDown delay-09s"><a href="#" class="btn btn-default btn-lg video" data-video="https://www.youtube.com/embed/h3bq22WQzxU" data-toggle="modal" data-target="#videoModal"><img src="img/clases/personal training.jpg" alt="" title="HAZ CLICK PARA MIRAR EL VIDEO"></a></div>
+        
+        <!--div modal-->
+        <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <iframe width="100%" height="350" src="" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+        <!--fin div modal-->
         <hr>
         <p class="wow fadeInLeft delay-05s" style="font-size:16px">El entrenador personal analiza la condición física de sus clientes a partir de test de aptitud física, pacta las metas tanto de mejora de la condición física como de la salud en un marco temporal, donde se valorara los resultados obtenidos a partir del entrenamiento y las pautas nutricionales seguidas. Para conseguir las metas el entrenador personal diseña un programa de entrenamiento adaptado a la condición física y los objetivos que desea alcanzar el cliente</p>
         <hr>
@@ -385,7 +398,19 @@ $(document).ready(function(){
  
 });
 <!--fin ir arriba-->
-
+<!--modal video-->
+ $(function() {
+    $(".video").click(function () {
+      var theModal = $(this).data("target"),
+      videoSRC = $(this).attr("data-video"),
+      videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+      $(theModal + ' iframe').attr('src', videoSRCauto);
+      $(theModal + ' button.close').click(function () {
+        $(theModal + ' iframe').attr('src', videoSRC);
+      });
+    });
+  });
+<!--fin modal video-->
 </script>
 
 </body>
