cambio boton regreso

--- a/Instructores Bailoterapia/Carli Dance.html
+++ b/Instructores Bailoterapia/Carli Dance.html
@@ -88,7 +88,7 @@ body {
 <!--</section>-->
 
 <a class="link animated fadeInUp delay-1s" href="#service">perfil</a>
-  <a class="link animated fadeInUp delay-1s" href="../instructores Aerobicos.html#aerobicos">regresar</a>
+  <a class="link animated fadeInUp delay-1s" href="../instructores Bailoterapia.html#bailoterapia">regresar</a>
 	
 	
 <!--</section>-->
