--- a/Instructores Bailoterapia/Patricio Vallejo.html
+++ b/Instructores Bailoterapia/Patricio Vallejo.html
@@ -64,7 +64,7 @@ body {
        	<div class="col-md-12">
           	<!-- <section class="main-section paddindinstructor" id="Portfolio">-->
              <!--<section class="main-section teaminstructor" id="team">--><!--main-section team-start-->
-            <hr> <h2 class="wow fadeInDown delay-04s"> <span style="color:white"> andrea novoa</span></h2>
+            <hr> <h2 class="wow fadeInDown delay-04s"> <span style="color:white"> patricio vallejo</span></h2>
             <hr>
 	<div class="container">
 	  
@@ -72,7 +72,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="#"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Andrea Novoa/andrea novoaP.jpg" alt="">
+	          <img src="../img/Instructores Bailoterapia/Patricio Vallejo/Patricio Vallejo.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="#" class="fa-facebook"></a></li>
@@ -110,8 +110,8 @@ body {
 
 <section class="main-sectioninstructor" id="service"><!--main-section-start-->
 	<div class="container">
-    	<h2 class=" wow fadeInLeft delay-05s"> andrea</h2>
-    	<h6 class=" wow fadeInLeft delay-05s">Licenciada en Eduacacion Fisica,Instructora,Presentadora,Capacitadora nivel Nacional.</h6>
+    	<h2 class=" wow fadeInLeft delay-05s">patricio</h2>
+    	<h6 class=" wow fadeInLeft delay-05s">Instructor,Presentador, nivel Nacional.</h6>
         <div class="row"><!--#555555     #428bca-->
         
         <div class="col-md-12">
@@ -141,7 +141,7 @@ body {
        </p>
        <hr> 
        <p class="parrafoinstructor">
-       Nombre : Andrea Novoa
+       Nombre : Patricio vallejo
        </p>
        <hr> 
         <p class="parrafoinstructor">
@@ -161,7 +161,7 @@ body {
        </p>
        <hr>
         <p class="parrafoinstructor">
-       Email : andreanov@hotmail.com
+       Email : patriciovallejo@hotmail.com
        </p>
        <hr> 
        
