--- a/Instructores Bailoterapia/Mauricio Riofrio.html
+++ b/Instructores Bailoterapia/Mauricio Riofrio.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 
-<title>Andrea Novoa</title>
+<title>Mauricio Riofrio</title>
 <link rel="icon" href="../favicon.png" type="image/png">
 <link rel="shortcut icon" href="../favicon.ico" type="img/x-icon">
 
@@ -64,7 +64,7 @@ body {
        	<div class="col-md-12">
           	<!-- <section class="main-section paddindinstructor" id="Portfolio">-->
              <!--<section class="main-section teaminstructor" id="team">--><!--main-section team-start-->
-            <hr> <h2 class="wow fadeInDown delay-04s"> <span style="color:white"> andrea novoa</span></h2>
+            <hr> <h2 class="wow fadeInDown delay-04s"> <span style="color:white">  mauricio riofrio</span></h2>
             <hr>
 	<div class="container">
 	  
@@ -72,7 +72,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="#"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Andrea Novoa/andrea novoaP.jpg" alt="">
+	          <img src="../img/Instructores Bailoterapia/Mauricio Riofrio/Mauricio Riofriop.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="#" class="fa-facebook"></a></li>
@@ -88,7 +88,7 @@ body {
 <!--</section>-->
 
 <a class="link animated fadeInUp delay-1s" href="#service">perfil</a>
-  <a class="link animated fadeInUp delay-1s" href="../instructores Aerobicos.html#aerobicos">regresar</a>
+  <a class="link animated fadeInUp delay-1s" href="../instructores Bailoterapia.html#bailoterapia">regresar</a>
 	
 	
 <!--</section>-->
@@ -110,8 +110,8 @@ body {
 
 <section class="main-sectioninstructor" id="service"><!--main-section-start-->
 	<div class="container">
-    	<h2 class=" wow fadeInLeft delay-05s"> andrea</h2>
-    	<h6 class=" wow fadeInLeft delay-05s">Licenciada en Eduacacion Fisica,Instructora,Presentadora,Capacitadora nivel Nacional.</h6>
+    	<h2 class=" wow fadeInLeft delay-05s">mauricio</h2>
+    	<h6 class=" wow fadeInLeft delay-05s">Instructor,Presentador nivel Nacional.</h6>
         <div class="row"><!--#555555     #428bca-->
         
         <div class="col-md-12">
@@ -141,7 +141,7 @@ body {
        </p>
        <hr> 
        <p class="parrafoinstructor">
-       Nombre : Andrea Novoa
+       Nombre : Mauricio Riofrio
        </p>
        <hr> 
         <p class="parrafoinstructor">
@@ -161,7 +161,7 @@ body {
        </p>
        <hr>
         <p class="parrafoinstructor">
-       Email : andreanov@hotmail.com
+       Email : maurir@hotmail.com
        </p>
        <hr> 
        
