--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -94,7 +94,9 @@ body {
 
 
 
-<section class="main-section paddindclase" id="Portfolio"><!--main-section-start-->
+<section class="main-section paddindclase" id="Portfolio">
+<A name="bailoterapia"></a>
+<!--main-section-start-->
 	<div class="container">
     	<h2>DONDE NECESITAS TU INSTRUCTOR..?</h2>
     	<h6>Mira los profesionales que estan mas serca de tu ubicacion asi te aseguramos una mejor calidad de servicio...</h6>
