--- a/Instructores Bailoterapia/Giovanni Malca.html
+++ b/Instructores Bailoterapia/Giovanni Malca.html
@@ -64,7 +64,7 @@ body {
        	<div class="col-md-12">
           	<!-- <section class="main-section paddindinstructor" id="Portfolio">-->
              <!--<section class="main-section teaminstructor" id="team">--><!--main-section team-start-->
-            <hr> <h2 class="wow fadeInDown delay-04s"> <span style="color:white"> giovani malca</span></h2>
+            <hr> <h2 class="wow fadeInDown delay-04s"> <span style="color:white"> giovanny malca</span></h2>
             <hr>
 	<div class="container">
 	  
@@ -110,7 +110,7 @@ body {
 
 <section class="main-sectioninstructor" id="service"><!--main-section-start-->
 	<div class="container">
-    	<h2 class=" wow fadeInLeft delay-05s"> giovani</h2>
+    	<h2 class=" wow fadeInLeft delay-05s"> giovanny</h2>
     	<h6 class=" wow fadeInLeft delay-05s">Instructor,Presentador,Capacitadora nivel Nacional.</h6>
         <div class="row"><!--#555555     #428bca-->
         
