--- a/Instructores Aerobicos/Edison Arias.html
+++ b/Instructores Aerobicos/Edison Arias.html
@@ -111,7 +111,7 @@ body {
 <section class="main-sectioninstructor" id="service"><!--main-section-start-->
 	<div class="container">
     	<h2 class=" wow fadeInLeft delay-05s">Edison</h2>
-    	<h6 class=" wow fadeInLeft delay-05s">Licenciado en Eduacacion Fisica,Instructora,Presentador,Capacitador nivel Nacional.</h6>
+    	<h6 class=" wow fadeInLeft delay-05s">Licenciado en Eduacacion Fisica,Instructor,Presentador,Capacitador nivel Nacional.</h6>
         <div class="row"><!--#555555     #428bca-->
         
         <div class="col-md-12">
