--- a/instructores Aerobicos.html
+++ b/instructores Aerobicos.html
@@ -160,7 +160,7 @@ body {
                     <p>Sur</p>
                 </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="Instructores Aerobicos/Jose Gualliichico.html"><img src="img/Instructore fitness Norte/Aerobicos/Jose Guallichico/jose guallichico.jpg" alt=""></a>	
+                	<a href="Instructores Aerobicos/Jose Guallichico.html"><img src="img/Instructore fitness Norte/Aerobicos/Jose Guallichico/jose guallichico.jpg" alt=""></a>	
                	  <h3>JOSE GUALLICHICO</h3>
                     <p>Pasivos</p>
                 </div>
