--- a/Instructores Aerobicos/Edison Arias.html
+++ b/Instructores Aerobicos/Edison Arias.html
@@ -26,6 +26,12 @@ body {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
+.bandanegra1{
+	background-color: #000;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	display: inline-block;
+	}
 </style>
 
 <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
@@ -134,7 +140,7 @@ body {
   <div class="panel-body">
     <div class="col-md-12">
     <hr>
-            <p class="parrafoinstructor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptate veniam ducimus reprehenderit at. Laudantium, nihil, doloremque, nulla, placeat omnis similique dicta quidem minima voluptas dolorem est quo cumque asperiores.</p>
+            <p class="parrafoinstructor">Apasionado por el mundo del fitness desde hace 20 años ,amplia experiencia como instructor y presentador fitness en varios eventos locales y nacionales uno de los pioneros en el mundo de la aerobica y el step a nivel pichincha,con muchas ganas de seguir aprendiendo y creciendo dia a dia</p>
        <hr>
        <p class="parrafoinstructor">
        Formación Académica : Lic Educacion Fisica
@@ -536,7 +542,11 @@ body {
     	</ul>
 	</div>
 </div>
+
+	
+
 </div><!--c-logo-part-end-->
+
 <!--main-section team-end-->
 
 <!--inicio carrusel-->
@@ -702,6 +712,7 @@ body {
         </div>
         <div class="container">
           <div class="redesfooter">
+         <!-- <marquee class="bandanegra1" scrollamount="3" scrolldelay="5" direction="left" height="60" width="100%" onmouseover="this.stop()" onmouseout="this.start()" bgcolor="#000000" padding:3px text-align: center ><img src="../img/marcas/puma.png" alt="" height="23" width="111"><img src="../img/marcas/adidas.jpg" alt="" height="23" width="111"></marquee>-->
           </div>
       </div>
   </div>
