--- a/Instructores Aerobicos/Rafael Casa.html
+++ b/Instructores Aerobicos/Rafael Casa.html
@@ -134,7 +134,7 @@ body {
   <div class="panel-body">
     <div class="col-md-12">
     <hr>
-            <p class="parrafoinstructor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptate veniam ducimus reprehenderit at. Laudantium, nihil, doloremque, nulla, placeat omnis similique dicta quidem minima voluptas dolorem est quo cumque asperiores.</p>
+            <p class="parrafoinstructor">Apasionado por el mundo del fitness desde hace 20 años ,amplia experiencia como instructor y presentador fitness en varios eventos locales y nacionales uno de los pioneros en el mundo de la aerobica y el step a nivel pichincha,con muchas ganas de seguir aprendiendo y creciendo dia a dia</p>
        <hr>
        <p class="parrafoinstructor">
        Formación Académica : Lic Educacion Fisica
