--- a/Instructores Aerobicos/Edison Arias.html
+++ b/Instructores Aerobicos/Edison Arias.html
@@ -78,7 +78,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="https://www.facebook.com/edisonrodrigo.ariasmoreno?ref=br_rs"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Edison Arias/edison ariasP.jpg" alt="">
+	          <img src="../img/Instructore Aerobicos/Aerobicos/Edison Arias/edison ariasP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="https://www.facebook.com/edisonrodrigo.ariasmoreno?ref=br_rs" class="fa-facebook"></a></li>
