--- a/Instructores Aerobicos/Jose Guallichico.html
+++ b/Instructores Aerobicos/Jose Guallichico.html
@@ -72,7 +72,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="https://www.facebook.com/search/top/?q=jose%20m%20guallichico"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/jose guallichicoP.jpg" alt="">
+	          <img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/jose guallichicoP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="https://www.facebook.com/search/top/?q=jose%20m%20guallichico" class="fa-facebook"></a></li>
@@ -453,14 +453,14 @@ body {
         		<div class="row">
                 	
         			<div class="col-md-4 item">
-                    <a href="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg" data-lightbox="roadtrip"><img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg" class="img-tumbnail" alt=""></img></a>
+                    <a href="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
-        			<div class="col-md-4 item"> <a href="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico2.jpg" data-lightbox="roadtrip"><img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico2.jpg"  class="img-tumbnail" alt=""></img></a></div>
-        			<div class="col-md-4 item"> <a href="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg" data-lightbox="roadtrip"><img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg"  class="img-tumbnail" alt=""></img></a></div>
-                    <div class="col-md-4 item"> <a href="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico4.jpg" data-lightbox="roadtrip"><img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico4.jpg"  class="img-tumbnail" alt=""></img></a></div>
-                    <div class="col-md-4 item"> <a href="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg" data-lightbox="roadtrip"><img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico2.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico2.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg"  class="img-tumbnail" alt=""></img></a></div>
+                    <div class="col-md-4 item"> <a href="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico4.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico4.jpg"  class="img-tumbnail" alt=""></img></a></div>
+                    <div class="col-md-4 item"> <a href="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico1.jpg"  class="img-tumbnail" alt=""></img></a></div>
                     <div class="col-md-4 item">
-                    <a href="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg" data-lightbox="roadtrip"><img src="../img/Instructore fitness Norte/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg" class="img-tumbnail" alt=""></img></a>
+                    <a href="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/fotos/photos/guallichico3.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
                     
         			<div class="col-md-4 item">
