--- a/Rodolfo lopez.html
+++ b/Rodolfo lopez.html
@@ -71,7 +71,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="#"></a></div>
-	          <img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/fito.jpg" alt="">
+	          <img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/fito.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="#" class="fa-facebook"></a></li>
@@ -450,25 +450,25 @@ body {
         		<div class="row">
                 	
         			<div class="col-md-4 item">
-                    <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/1.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/1.jpg" class="img-tumbnail" alt=""></img></a>
+                    <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/1.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/1.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/2.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/2.jpg"  class="img-tumbnail" alt=""></img></a></div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/3.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/3.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/2.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/2.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/3.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/3.jpg"  class="img-tumbnail" alt=""></img></a></div>
                     <div class="col-md-4 item">
-                    <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/4.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/4.jpg" class="img-tumbnail" alt=""></img></a>
+                    <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/4.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/4.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/5.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/5.jpg" class="img-tumbnail" alt=""></img></a></div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/6.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/6.jpg" class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/5.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/5.jpg" class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/6.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/6.jpg" class="img-tumbnail" alt=""></img></a></div>
                     <div class="col-md-4 item">
-                    <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/1.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/1.jpg" class="img-tumbnail" alt=""></img></a>
+                    <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/1.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/1.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/2.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/2.jpg"  class="img-tumbnail" alt=""></img></a></div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/3.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/3.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/2.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/2.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/3.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/3.jpg"  class="img-tumbnail" alt=""></img></a></div>
                     <div class="col-md-4 item">
-                    <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/4.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/4.jpg" class="img-tumbnail" alt=""></img></a>
+                    <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/4.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/4.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/5.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/5.jpg" class="img-tumbnail" alt=""></img></a></div>
-        			<div class="col-md-4 item"> <a href="img/Instructore fitness Norte/Aerobicos/Rodolfo López/6.jpg" data-lightbox="roadtrip"><img src="img/Instructore fitness Norte/Aerobicos/Rodolfo López/6.jpg" class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/5.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/5.jpg" class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="img/Instructore Aerobicos/Aerobicos/Rodolfo López/6.jpg" data-lightbox="roadtrip"><img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/6.jpg" class="img-tumbnail" alt=""></img></a></div>
                     <hr>
         		</div>
         	</div>
