--- a/Instructores Aerobicos/Andrea Novoa.html
+++ b/Instructores Aerobicos/Andrea Novoa.html
@@ -72,7 +72,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="#"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Andrea Novoa/andrea novoaP.jpg" alt="">
+	          <img src="../img/Instructore Aerobicos/Aerobicos/Andrea Novoa/andrea novoaP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="#" class="fa-facebook"></a></li>
