--- a/Instructores Aerobicos/Diana.html
+++ b/Instructores Aerobicos/Diana.html
@@ -72,7 +72,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="https://www.facebook.com/dika57"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Diana/dianaP.jpg" alt="">
+	          <img src="../img/Instructore Aerobicos/Aerobicos/Diana/dianaP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="https://www.facebook.com/dika57" class="fa-facebook"></a></li>
@@ -682,7 +682,7 @@ body {
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
