--- a/Instructores Aerobicos/Ivan Ayala.html
+++ b/Instructores Aerobicos/Ivan Ayala.html
@@ -72,7 +72,7 @@ body {
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
 	          <div class="team-leader-shadow"><a href="https://www.facebook.com/ivan.ayala.96387"></a></div>
-	          <img src="../img/Instructore fitness Norte/Aerobicos/Ivan Ayala/ivan ayalaP.jpg" alt="">
+	          <img src="../img/Instructore Aerobicos/Aerobicos/Ivan Ayala/ivan ayalaP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
 	            <li><a href="https://www.facebook.com/ivan.ayala.96387" class="fa-facebook"></a></li>
@@ -134,7 +134,7 @@ body {
   <div class="panel-body">
     <div class="col-md-12">
     <hr>
-            <p class="parrafoinstructor">Apasionado por el mundo del fitness desde hace 20 años ,amplia experiencia como instructor y presentador fitness en varios eventos locales y nacionales uno de los pioneros en el mundo de la aerobica y el step a nivel pichincha,con muchas ganas de seguir aprendiendo y creciendo dia a dia</p>
+            <p class="parrafoinstructor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptate veniam ducimus reprehenderit at. Laudantium, nihil, doloremque, nulla, placeat omnis similique dicta quidem minima voluptas dolorem est quo cumque asperiores.</p>
        <hr>
        <p class="parrafoinstructor">
        Formación Académica : Lic Educacion Fisica
@@ -682,7 +682,7 @@ body {
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
