--- a/Instructores Aerobicos/Andrea Novoa.html
+++ b/Instructores Aerobicos/Andrea Novoa.html
@@ -682,7 +682,7 @@ body {
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
