--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <header class="header" id="header"><!--header-start-->
 	<div class="container">
     	<figure class="logo animated fadeInDown delay-07s">
-        	<a href="#"><img src="img/logo.png" alt=""></a>	
+        	<a href="#"><img src="img/logo1.png" alt=""></a>	
         </figure>	
         <h1 class="animated fadeInDown delay-07s">Instructores Fitness en Ecuador        </h1>
         <p>Primera plataforma Fitness en Ecuador</p>
@@ -64,7 +64,7 @@
         	<li><a href="#header">Inicio</a></li>
             <li><a href="#service">Nosotros</a></li>
             <li><a href="#Portfolio">Clases</a></li>
-            <li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
+            <li class="small-logo"><a href="#header"><img src="img/small-logo1.png" alt=""></a></li>
             <li><a href="#client">Testimonios</a></li>
             <li><a href="#team">Centros</a></li>
             <li><a href="#contact">Contacto</a></li>
@@ -443,7 +443,7 @@
 </div>
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#"><img src="img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="#"><img src="img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
