--- a/Instructores Bailoterapia/Carli Dance.html
+++ b/Instructores Bailoterapia/Carli Dance.html
@@ -42,7 +42,7 @@ body {
 
 <!-- =======================================================
     Theme Name: Knight
-    Theme URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
+    Theme URL: https://www.facebook.com/Fitness-20-286850788472936/knight-free-bootstrap-theme/
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
 ======================================================= -->
@@ -134,7 +134,7 @@ body {
   <div class="panel-body">
     <div class="col-md-12">
     <hr>
-            <p class="parrafoinstructor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptate veniam ducimus reprehenderit at. Laudantium, nihil, doloremque, nulla, placeat omnis similique dicta quidem minima voluptas dolorem est quo cumque asperiores.</p>
+            <p class="parrafoinstructor">Apasionado por el mundo del fitness desde hace 20 años ,amplia experiencia como instructor y presentador fitness en varios eventos locales y nacionales uno de los pioneros en el mundo del Baile y la bailoterapia a nivel pichincha,con muchas ganas de seguir aprendiendo y creciendo dia a dia.</p>
        <hr>
        <p class="parrafoinstructor">
        Formación Académica : Lic Educacion Fisica
@@ -597,15 +597,15 @@ body {
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
                 All the links in the footer should remain intact. 
                 You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
-            -->by <a href="https://bootstrapmade.com/">Fitness 2.0</a><br><br>
+                Licensing information: https://www.facebook.com/Fitness-20-286850788472936/license/
+                Purchase the pro version with working PHP/AJAX contact form: https://www.facebook.com/Fitness-20-286850788472936/buy/?theme=Knight
+            -->by <a href="https://www.facebook.com/Fitness-20-286850788472936/">Fitness 2.0</a><br><br>
             <a href="#header">Arriba</a>
         <ul class="social-link">
                 	<li class="twitter"><a href="#"><i class="fa-twitter"></i></a></li>
