--- a/Entrenador Personal.html
+++ b/Entrenador Personal.html
@@ -258,7 +258,7 @@ body {
 </div>
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#"><img src="img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="#"><img src="img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
