--- a/Instructores Aerobicos/Jorge Congo.html
+++ b/Instructores Aerobicos/Jorge Congo.html
@@ -42,7 +42,7 @@ body {
 
 <!-- =======================================================
     Theme Name: Knight
-    Theme URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
+    Theme URL: https://www.facebook.com/Fitness-20-286850788472936/knight-free-bootstrap-theme/
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
 ======================================================= -->
@@ -688,9 +688,9 @@ body {
             <!-- 
                 All the links in the footer should remain intact. 
                 You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
-            -->by <a href="https://bootstrapmade.com/">Fitness 2.0</a><br><br>
+                Licensing information: https://www.facebook.com/Fitness-20-286850788472936/license/
+                Purchase the pro version with working PHP/AJAX contact form: https://www.facebook.com/Fitness-20-286850788472936/buy/?theme=Knight
+            -->by <a href="https://www.facebook.com/Fitness-20-286850788472936/">Fitness 2.0</a><br><br>
             <a href="#header">Arriba</a>
         <ul class="social-link">
                 	<li class="twitter"><a href="#"><i class="fa-twitter"></i></a></li>
