--- a/Instructores Bailoterapia/Roberto Tufiño.html
+++ b/Instructores Bailoterapia/Roberto Tufiño.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 
-<title>Andrea Novoa</title>
+<title>Roberto Tufiño</title>
 <link rel="icon" href="../favicon.png" type="image/png">
 <link rel="shortcut icon" href="../favicon.ico" type="img/x-icon">
 
@@ -42,7 +42,7 @@ body {
 
 <!-- =======================================================
     Theme Name: Knight
-    Theme URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
+    Theme URL: https://www.facebook.com/Fitness-20-286850788472936/knight-free-bootstrap-theme/
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
 ======================================================= -->
@@ -597,15 +597,15 @@ body {
 
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="../index.html"><img src="../img/footer-logo1.png" alt=""></a></div>
         <span class="copyright">&copy; Instructores Fitness en Ecuador</span>
         <div class="credits">
             <!-- 
                 All the links in the footer should remain intact. 
                 You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
-            -->by <a href="https://bootstrapmade.com/">Fitness 2.0</a><br><br>
+                Licensing information: https://www.facebook.com/Fitness-20-286850788472936/license/
+                Purchase the pro version with working PHP/AJAX contact form: https://www.facebook.com/Fitness-20-286850788472936/buy/?theme=Knight
+            -->by <a href="https://www.facebook.com/Fitness-20-286850788472936/">Fitness 2.0</a><br><br>
             <a href="#header">Arriba</a>
         <ul class="social-link">
                 	<li class="twitter"><a href="#"><i class="fa-twitter"></i></a></li>
