--- a/instructores Aerobicos.html
+++ b/instructores Aerobicos.html
@@ -160,9 +160,9 @@ body {
                     <p>Sur</p>
                 </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="Instructores Aerobicos/Jose Guallichico.html"><img src="img/Instructore Aerobicos/Aerobicos/Jose Guallichico/jose guallichico.jpg" alt=""></a>	
-               	  <h3>JOSE GUALLICHICO</h3>
-                    <p>Pasivos</p>
+                	<a href="Instructores Aerobicos/Erwin Lopez.html"><img src="img/Instructore Aerobicos/Aerobicos/Erwin Lopez/Erwin Lopez.jpg" alt=""></a>	
+               	  <h3>ERWIN LOPEZ</h3>
+                    <p>	Norte</p>
                 </div>
                 
                  <div class=" Portfolio-box tonificacion">
