Fitness de Combate

--- a/instructores Fitness de combate.html
+++ b/instructores Fitness de combate.html
@@ -119,9 +119,9 @@ body {
                     <p>San Carlos</p>
                 </div>
                 <div class="Portfolio-box pasivos">
-                	<a href="#"><img src="img/fantasmas/7.jpg" alt=""></a>	
-               	  <h3>Paul</h3>
-                    <p>Pasivo</p>
+                	<a href="Instructores Fitness de Combate/Diego.html"><img src="img/Instructores fitness de combate/Diego/Diego.jpg" alt=""></a>	
+               	  <h3>Diego Moretal</h3>
+                    <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box cardio">
                 	<a href="#"><img src="img/fantasmas/2.jpg" alt=""></a>	
