--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Knight
             -->by <a href="https://www.facebook.com/Fitness-20-286850788472936/">Fitness 2.0</a>
-         <br>   <a href="">INFORMACION</a>        </div>
+         <br>   <a href="informacion.html">INFORMACION</a>        </div>
     </div>
 </footer>
 
