--- a/Instructores Aerobicos/Marco Yaguana.html
+++ b/Instructores Aerobicos/Marco Yaguana.html
@@ -26,6 +26,17 @@ body {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
+.bandaazul{
+	padding-bottom: 25px;
+	padding-top: 25px;
+}
+.img{
+	display: inline-block;
+	width: 250px;
+	height: 250px;
+	border-radius: 50%;
+	padding-right: 20px
+}
 </style>
 
 <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
@@ -679,6 +690,20 @@ body {
   <i class="fa fa-whatsapp fa-3x pull-left"></i> Escríbenos ahora..!<br>0998330322</a>
     </div>
 </section><!--business-talking-end-->
+<marquee class="bandaazul" scrollamount="3" scrolldelay="5" direction="left" height="300" width="100%" onmouseover="this.stop()" onmouseout="this.start()" bgcolor="#000000">
+    <a href="Instructores Aerobicos/Andrea Novoa.html"><img src="../img/Instructore Aerobicos/Aerobicos/Andrea Novoa/andrea novoaP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Camilo Ortiz.html"><img src="../img/Instructore Aerobicos/Aerobicos/Camilo Ortiz/camilo ortizP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Diana.html"><img src="../img/Instructore Aerobicos/Aerobicos/Diana/dianaP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Edison Arias.html"><img src="../img/Instructore Aerobicos/Aerobicos/Edison Arias/edison ariasP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Gabriela Teran.html"><img src="../img/Instructore Aerobicos/Aerobicos/Gabriela Taran/gabriela teranP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Ivan Ayala.html"><img src="../img/Instructore Aerobicos/Aerobicos/Ivan Ayala/ivan ayalaP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Jorge Congo.html"><img src="../img/Instructore Aerobicos/Aerobicos/Jorge Congo/jorge congoP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Jose Guallichico.html"><img src="../img/Instructore Aerobicos/Aerobicos/Jose Guallichico/jose guallichicoP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Marco Yaguana.html"><img src="../img/Instructore Aerobicos/Aerobicos/Marco Yaguana/marco yaguanaP.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Rafael Casa.html"><img src="../img/Instructore Aerobicos/Aerobicos/rafael caza/rafael casaP.jpg" alt="" class="img"></a>
+	<a href="Rodolfo lopez.html"><img src="../img/Instructore Aerobicos/Aerobicos/Rodolfo López/fito.jpg" alt="" class="img"></a>
+	<a href="Instructores Aerobicos/Willian Garzon.html"><img src="../img/Instructore Aerobicos/Aerobicos/willian garzon/willian garzonP.jpg" alt="" class="img"></a>
+</marquee>
 
 <footer class="footer">
     <div class="container">
