--- a/informacion.html
+++ b/informacion.html
@@ -45,16 +45,31 @@
 	padding-top: 0px;
 	padding-right: 0px;
 }
+/*video{
+	position:fixed;
+	min-width:100%;
+	min-height:100%;
+	top:50%;
+	left:50%;
+	transform: translateX(-50%) translateY(-50%);
+	z-index:-1;
+	
+	
+	}*/
 </style>
 
 </head>
 <body>
+<!--<video src="video/infofitness.mp4" autoplay loop ></video>-->
 <!--boton arriba-->
 <button type="button" class="btn btn-default ir-arriba " aria-label="Left Align">
   <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
 </button>
 <!--fin boton arriba-->
-<header class="header" id="header"><!--header-start-->
+
+        
+<header class="headerinfo" id="header"><!--header-start-->
+
 	<div class="container">
     	<figure class="logo animated fadeInDown delay-07s">
         	<a href="#"><img src="img/logo1.png" alt=""></a>	
@@ -62,9 +77,9 @@
         <h1 class="animated fadeInDown delay-07s">Bienvenido al futuro del fitness Ecuatoriano        </h1>
         <p>Primera plataforma digital Fitness en Ecuador</p>
         <ul class="we-create animated fadeInUp delay-1s">
-       	  <li>solo existen 2 tipos de negocio los que están en Internet y los que DESAPARECERÁN (Bill gates)</li>
+       	  <li>solo existen 2 tipos de negocios.. los que están en Internet y los que DESAPARECERÁN (Bill gates)</li>
         </ul>
-            <a class="link animated fadeInUp delay-1s" href="#service">ÚNETE A LA EVOLUCION</a>
+            <a class="link animated fadeInUp delay-1s" href="#service">ÚNETE A LA EVOLUCIón</a>
     </div>
 </header><!--header-end-->
 
@@ -87,8 +102,7 @@
                 <p>Querido colega  fitness.
                 <br>
 
- Presenté.-
- <br>
+ 
 
 Sabías que en el Ecuador 115 búsquedas diarias en Google son para buscar INSTRUCTORES FITNESS...Y la mayoría de ellas no se concretan por no haber un lugar específico donde encontrarlos? o encuentran Instructores que no poseen la formación para ocupar dichos puestos? 
 Motivo por el cual queremos darte a conocer la creación de la primera PLATAFORMA DIGITAL FITNESS EN ECUADOR en dónde ponemos a disposición la presencia digital de todos los instructores que quieran unirse a esta iniciativa.
