--- a/Instructores Bailoterapia/Cristian Lastra.html
+++ b/Instructores Bailoterapia/Cristian Lastra.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 
-<title>Andrea Novoa</title>
+<title>Cristian Lastra</title>
 <link rel="icon" href="../favicon.png" type="image/png">
 <link rel="shortcut icon" href="../favicon.ico" type="img/x-icon">
 
