--- a/Instructores Bailoterapia/Jonh Espinoza.html
+++ b/Instructores Bailoterapia/Jonh Espinoza.html
@@ -149,7 +149,7 @@ body {
             <p class="parrafoinstructor">Apasionado por el mundo del fitness desde hace 20 años ,amplia experiencia como instructor y presentador fitness en varios eventos locales y nacionales uno de los pioneros en el mundo del Baile y la bailoterapia a nivel pichincha,con muchas ganas de seguir aprendiendo y creciendo dia a dia.</p>
        <hr>
        <p class="parrafoinstructor">
-       Formación Académica : Lic Educacion Fisica
+       Formación Académica : Lic  Fisica
        </p>
        <hr> 
        <p class="parrafoinstructor">
