--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -150,9 +150,9 @@ body {
                     <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box tonificacion" >
-                	<a href="Instructores Bailoterapia/Jonh Espinoza.html"><img src="img/Instructores Bailoterapia/John Espinoza/Jonh Espinoza.jpg" alt=""></a>	
-               	  <h3>Jhonn Espinoza</h3>
-                    <p>Sur</p>
+                	<a href="Instructores Aerobicos/Jorge Congo.html"><img src="img/Instructore Aerobicos/Aerobicos/Jorge Congo/jorge congo.jpg" alt=""></a>	
+               	  <h3>Jorge Congo</h3>
+                    <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box tonificacion">
                 	<a href="Instructores Bailoterapia/Patricio Vallejo.html"><img src="img/Instructores Bailoterapia/Patricio Vallejo/Patricio Vallejo.jpg" alt=""></a>	
