--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -176,7 +176,7 @@ body {
                     <p>Sur</p>
       </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="#"><img src="img/Instructores Bailoterapia/jorge perez/jorge perez.jpg" alt=""></a>	
+                	<a href="Instructores Bailoterapia/Jorge Perez.html"><img src="img/Instructores Bailoterapia/jorge perez/jorge perez.jpg" alt=""></a>	
                	  <h3>Jorge Perez</h3>
                     <p>centro</p>
       </div>
