--- a/informacionp.html
+++ b/informacionp.html
@@ -69,7 +69,7 @@ video{
 <!--fin boton arriba-->
 
         
-<header class="headerinfo" id="header"><!--header-start-->
+<header class="headerinfoP" id="header"><!--header-start-->
 
   <div class="container">
     	<figure class="logo animated fadeInDown delay-07s">
