--- a/Instructores Bailoterapia/Mauricio Riofrio.html
+++ b/Instructores Bailoterapia/Mauricio Riofrio.html
@@ -143,7 +143,7 @@ body {
   <div class="panel-body">
     <div class="col-md-12">
     <hr>
-            <p class="parrafoinstructor">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptate veniam ducimus reprehenderit at. Laudantium, nihil, doloremque, nulla, placeat omnis similique dicta quidem minima voluptas dolorem est quo cumque asperiores.</p>
+            <p class="parrafoinstructor">Apasionado por el mundo del fitness desde hace 10 años ,amplia experiencia como instructor y presentador fitness en varios eventos locales y nacionales uno de los pioneros en el mundo del Baile y la bailoterapia a nivel pichincha,con muchas ganas de seguir aprendiendo y creciendo dia a dia</p>
        <hr>
        <p class="parrafoinstructor">
        Formación Académica : Lic Educacion Fisica
@@ -154,7 +154,7 @@ body {
        </p>
        <hr> 
         <p class="parrafoinstructor">
-       Dirección : Barrio San Carlos (Norte de Quito)
+       Dirección : Barrio Calzado (Sur de Quito)
        </p>
        <hr>
         <p class="parrafoinstructor">
@@ -162,7 +162,7 @@ body {
        </p>
        <hr>  
         <p class="parrafoinstructor">
-       Tipos de clase que maneja : Hi-low ,Aerobics,Step,Suspention Training(TRX),Functional Training,
+       Tipos de clase que maneja : Zumba ,Baile Fitness,Merenguisimo.
        </p>
        <hr>
         <p class="parrafoinstructor">
