--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -176,8 +176,8 @@ body {
                     <p>Sur</p>
       </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="Instructores Bailoterapia/Jorge Perez.html"><img src="img/Instructores Bailoterapia/jorge perez/jorge perez.jpg" alt=""></a>	
-               	  <h3>Jorge Perez</h3>
+                	<a href="Instructores Bailoterapia/Paul Latino.html"><img src="img/Instructores Bailoterapia/Paul Latino/Paul Latino.jpg" alt=""></a>	
+               	  <h3>Paul Latino</h3>
                     <p>centro</p>
       </div>
               
